discussion/kv_engine/147317/147317_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Use cb::net::getHostname

cb::net::getHostname picks up the correct error variable
on Win32

Change-Id: I5966242bdc866596f9a8e2f61ce5a11cbef02fc5

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-03-01 08:56:23.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-03-01 09:14:57.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7319/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/auditd/src/audit_interface.cc:35:58: error: no member named "getHostname" in namespace "cb::net" [clang-diagnostic-error]
                config_file, server_cookie_api, cb::net::getHostname());
                                                         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7319/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/auditd/src/audit_interface.cc:35:58:
error: no member named "getHostname" in namespace "cb::net" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7319/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33873/ : FAILURE

Compile error at ..\kv_engine\auditd\src\audit_interface.cc(35): error C2039: "getHostname": is not a member of "cb::net" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33873/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29113/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/auditd/src/audit_interface.cc:35:58:
error: no member named "getHostname" in namespace "cb::net"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29113/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7977/ : FAILURE

Compile error at [2021-03-01T09:05:10.929Z] ../kv_engine/auditd/src/audit_interface.cc:35:49:
error: no member named "getHostname" in namespace "cb::net"; did you mean "getprogname"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7977/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8921/ : FAILURE

Compile error at [2021-03-01T09:08:31.013Z] ../kv_engine/auditd/src/audit_interface.cc:35:58:
error: ?getHostname? is not a member of ?cb::net?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8921/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9058/ : FAILURE

Compile error at [2021-03-01T09:12:00.468Z] ../kv_engine/auditd/src/audit_interface.cc:35:58:
error: ?getHostname? is not a member of ?cb::net?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9058/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9269/ : FAILURE

Compile error at [2021-03-01T09:09:36.536Z] ../kv_engine/auditd/src/audit_interface.cc:35:58:
error: no member named "getHostname" in namespace "cb::net"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9269/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16820/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/5855/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-03-01 10:57:33.000000000
Message: 
Patch Set 1:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33875/ : FAILURE

CMake error: C:/Jenkins/workspace/kv_engine-windows-master/tlm/cmake/Modules/CouchbaseGoogleTestAddTests.cmake:40 (message) ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33875/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9270/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/5856/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7320/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29115/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7978/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8922/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9059/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16821/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-03-01 12:54:45.000000000
Message: 
Patch Set 1: Verified+1

Build Successful 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/5856/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7320/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29115/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7978/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8922/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9059/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9286/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16821/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33892/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: James H
Date: 2021-03-01 13:56:29.000000000
Message: 
Patch Set 1: Code-Review+1
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-03-01 13:56:35.000000000
Message: 
Patch Set 1: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
